--- a/index.html
+++ b/index.html
@@ -60,6 +60,17 @@
                 </div>
             </div>
          </div>
+         <div class="hot-deal">
+            <div class="deal-text">
+                <h3>Hot Deal ! Sale Up To 25% <span style="color: #E55473;"> Off </span></h3>
+                <br>
+                <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+                <button>Sign Up</button>
+            </div>
+            <div class="deal-picture">
+                <img src="Flower Asset/pngwing 8.png" alt="">
+            </div>
+         </div>
     </main>
     <footer>
 
