--- a/index.html
+++ b/index.html
@@ -65,10 +65,28 @@
                 <h3>Hot Deal ! Sale Up To 25% <span style="color: #E55473;"> Off </span></h3>
                 <br>
                 <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
-                <button>Sign Up</button>
+                <button id="deal-button">Sign Up</button>
             </div>
             <div class="deal-picture">
                 <img src="Flower Asset/pngwing 8.png" alt="">
+            </div>
+         </div>
+         <div class="insta-section">
+            <div class="istra">
+                <h4>Instagram</h4>
+                <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+            </div>
+            <div class="instagram-image">
+                <div><img class="insta-img" src="Flower Asset/Flower 01.png" alt=""></div>
+                <div><img class="insta-img" src="Flower Asset/Rectangle 4.png" alt=""></div>
+                <div><img class="insta-img" src="Flower Asset/Rectangle 5.png" alt=""></div>
+                <div><img class="insta-img" src="Flower Asset/Rectangle 6.png" alt=""></div>
+            </div>
+            <div class="latest-deal">
+                <div><h3>Get The Latest Deals</h3>
+                <p>$30 coupon for first shopping</p></div>
+                <div><input type="email" id="email" name="email" placeholder="Enter Your Email Here">
+                <button>Subscribe</button></div>
             </div>
          </div>
     </main>
