--- a/index.html
+++ b/index.html
@@ -91,6 +91,11 @@
          </div>
     </main>
     <footer>
+        <div class="footer">
+            <div><h3><span style="color: #E55473;">Flower</span>Shop</h3></div>
+            <div><h5>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</h5></div>
+            <div><h6>@2020-2023, FlowerShop.com. All rights reserved. </h6></div>
+        </div>
 
     </footer>
 </body>
